--- a/src/sass/base/_setting.scss
+++ b/src/sass/base/_setting.scss
@@ -11,21 +11,8 @@ body {
     font-size: 16px;
 	min-width: 320px;
 	position: relative;
-	line-height: 1.65;
-	font-family: 'Museo Sans Cyrl 700';
+	font-family: 'MuseoSansCyrl', sans-serif;
 	overflow-x: hidden;
-	color: #000000;
-	background-color: #ffffff;
-	input, textarea {
-		border: #666 1px solid;
-		outline: none;
-		&:focus:required:invalid {
-			border-color: red;
-		}
-		&:required:valid {
-			border-color: green;
-		}
-	}
 }
 
 .img-responsive {
@@ -42,17 +29,21 @@ a:hover {
     text-decoration: none;
 }
 
-b, strong {
-	font-weight: bold;
-}
-
-.img-responsive {
-    display: block;
-    max-width: 100%;
-	height: auto;
-}
-
 .container{
-	@include min-max(320px, 1220px, 15px);
+	@include min-max(320px, 950px, 15px);
+}
+
+.btn{
+	display: block;
+	width: 150px;
+	height: 30px;
+	border-radius: 5px;
+	border: none;
+	background-color: $main-color;
+	color: #ffffff;
+	font-size: 12px;
+	font-weight: 500;
+	text-transform: uppercase;
+	cursor: pointer;
 }
 
