--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,14 @@
 @import 'base/mixins';
 @import 'base/setting';
 
+@import 'blocks/promo';
+@import 'blocks/advantages';
+
+
+
+
+
+/* always end */
+@import 'media';
+
 
