done consultation block

--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -19,6 +19,19 @@
             font-size: 12px;
         }
     }
+    .consultation{
+        .title_consultation{
+            text-align: center;
+        }
+
+        &__desc{
+            text-align: center;
+        }
+
+        .feed-form{
+            margin: 0 auto;
+        }
+    }
 }
 // 576px - 767px
 @media (max-width: 767px){
@@ -44,6 +57,7 @@
             margin-bottom: 20px;
         }
     }
+    
 }
 // 320px - 575px
 @media (max-width: 575px){
@@ -58,4 +72,15 @@
            display: none;
        }
    }
+
+   .consultation{
+        .title_consultation{
+            font-size: 19px;
+            margin-bottom: 50px;
+        }
+
+        &__desc{
+           font-size: 16px;
+        }
+    }
 }
