--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -4,12 +4,7 @@
     min-height: 477px;
     padding: 71px 0 81px 0;
 
-    &__title {
-        color: #0d0d0d;
-        font-size: 30px;
-        font-weight: 700;
-        text-align: center;
-        text-transform: uppercase;
+    &_title {
         margin-bottom: 65px;
     }
     &__items {
