--- a/src/sass/base/_setting.scss
+++ b/src/sass/base/_setting.scss
@@ -45,5 +45,46 @@ a:hover {
 	font-weight: 500;
 	text-transform: uppercase;
 	cursor: pointer;
+	&_consultation{
+		width: 300px;
+		height: 55px;
+		border-radius: 5px;
+		font-size: 16px;
+		font-weight: 500;
+	}
 }
 
+.title{
+	color: #0d0d0d;
+	font-size: 30px;
+	font-weight: 700;
+	text-align: center;
+	text-transform: uppercase;
+	&_advantages{
+		margin-bottom: 65px;
+	}
+	&_consultation{
+		color: #ffffff;
+        font-size: 36px;
+        text-align: left;
+        margin-bottom: 80px;
+	}
+}
+
+.feed-form{
+	display: flex;
+	flex-direction: column;
+	width: 300px;
+	
+	input{
+		height: 50px;
+		background-color: #ffffff;
+		border-radius: 5px;
+		border: none;
+		margin-bottom: 15px;
+		padding: 0 20px;
+		&:nth-child(3){
+			margin-bottom: 20px;
+		}
+	}
+}
