done carousel block

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,11 +2,14 @@
 @import 'base/variables';
 @import 'base/fonts';
 @import 'base/mixins';
+
 @import 'base/setting';
 
 @import 'blocks/promo';
 @import 'blocks/advantages';
 @import 'blocks/consultation';
+@import 'base/slick';
+@import 'blocks/carousel';
 
 
 
