--- a/src/scss/base/_setting.scss
+++ b/src/scss/base/_setting.scss
@@ -52,6 +52,13 @@ a:hover {
 		font-size: 16px;
 		font-weight: 500;
 	}
+	&_catalog-item{
+		width: 131px;
+		height: 40px;
+		border-radius: 5px;
+		font-size: 14px;
+		font-weight: 500;
+	}
 }
 
 .title{
