--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -1,86 +1,99 @@
+/* -------------- Media Query ------------*/
 // 992px - 1200px
-@media (max-width: 1200px){
-   
+@media (max-width: 1200px) {
 }
 // 768px - 991px
-@media (max-width: 991px){
-    .promo{
-        &__wrap{
-            align-items: center;
-        }
-    }
-    
-    .advantages{
-        &__header{
-            font-size: 16px;
-        }
+@media (max-width: 991px) {
+	.promo {
+		&__wrap {
+			align-items: center;
+		}
+	}
 
-        &__text{
-            font-size: 12px;
-        }
-    }
-    .consultation{
-        .title_consultation{
-            text-align: center;
-        }
+	.advantages {
+		&__header {
+			font-size: 16px;
+		}
 
-        &__desc{
-            text-align: center;
-        }
+		&__text {
+			font-size: 12px;
+		}
+	}
+	.consultation {
+		.title_consultation {
+			text-align: center;
+		}
 
-        .feed-form{
-            margin: 0 auto;
-        }
-    }
+		&__desc {
+			text-align: center;
+		}
+
+		.feed-form {
+			margin: 0 auto;
+		}
+	}
+	.catalog{
+		padding-top: 100px;
+
+		&__content{
+			justify-content: space-around;
+		}
+	}
 }
 // 576px - 767px
-@media (max-width: 767px){
-    .header{
-        flex-direction: column;
-        justify-content: space-between;
-        margin: 0;
-        margin-bottom: 20px;
+@media (max-width: 767px) {
+	.header {
+		flex-direction: column;
+		justify-content: space-between;
+		margin: 0;
+		margin-bottom: 20px;
 
-        &__logo {
-            margin-bottom: 20px;
-        }
-        &__official{
-            margin-bottom: 27px;
-        }
-    }
-    .advantages{
-        &__items{
-            flex-direction: column;
-            align-items: center;
-        }
-        &__item{
-            margin-bottom: 20px;
-        }
-    }
-    
+		&__logo {
+			margin-bottom: 20px;
+		}
+		&__official {
+			margin-bottom: 27px;
+		}
+	}
+	.advantages {
+		&__items {
+			flex-direction: column;
+			align-items: center;
+		}
+		&__item {
+			margin-bottom: 20px;
+		}
+	}
 }
 // 320px - 575px
-@media (max-width: 575px){
-   .promo{
-       &__title{
-           font-size: 24px;
-       }
-       &__subtitle{
-          font-size: 16px;
-       }
-       &__icons{
-           display: none;
-       }
-   }
+@media (max-width: 575px) {
+	.promo {
+		&__title {
+			font-size: 24px;
+		}
+		&__subtitle {
+			font-size: 16px;
+		}
+		&__icons {
+			display: none;
+		}
+	}
 
-   .consultation{
-        .title_consultation{
-            font-size: 19px;
-            margin-bottom: 50px;
-        }
+	.consultation {
+		.title_consultation {
+			font-size: 19px;
+			margin-bottom: 50px;
+		}
 
-        &__desc{
-           font-size: 16px;
-        }
-    }
+		&__desc {
+			font-size: 16px;
+		}
+	}
+
+	.catalog{
+		.catalog__tab {
+			width: 125px;
+			font-size: 9px;
+		}
+	}
 }
