--- a/src/scss/base/_setting.scss
+++ b/src/scss/base/_setting.scss
@@ -1,17 +1,18 @@
-
 /* -------------- Basic Page Settings ------------*/
 
-*, *:before, *:after{
+*,
+*:before,
+*:after {
 	box-sizing: border-box;
 	margin: 0;
-    padding: 0;
+	padding: 0;
 }
 
 body {
-    font-size: 16px;
+	font-size: 16px;
 	min-width: 320px;
 	position: relative;
-	font-family: 'MuseoSansCyrl', sans-serif;
+	font-family: "MuseoSansCyrl", sans-serif;
 	overflow-x: hidden;
 }
 
@@ -26,14 +27,14 @@ body {
 
 a,
 a:hover {
-    text-decoration: none;
+	text-decoration: none;
 }
 
-.container{
+.container {
 	@include min-max(320px, 950px, 15px);
 }
 
-.btn{
+.btn {
 	display: block;
 	width: 150px;
 	height: 30px;
@@ -45,14 +46,14 @@ a:hover {
 	font-weight: 500;
 	text-transform: uppercase;
 	cursor: pointer;
-	&_consultation{
+	&_consultation {
 		width: 300px;
 		height: 55px;
 		border-radius: 5px;
 		font-size: 16px;
 		font-weight: 500;
 	}
-	&_catalog-item{
+	&_catalog-item {
 		width: 131px;
 		height: 40px;
 		border-radius: 5px;
@@ -61,36 +62,36 @@ a:hover {
 	}
 }
 
-.title{
+.title {
 	color: #0d0d0d;
 	font-size: 30px;
 	font-weight: 700;
 	text-align: center;
 	text-transform: uppercase;
-	&_advantages{
+	&_advantages {
 		margin-bottom: 65px;
 	}
-	&_consultation{
+	&_consultation {
 		color: #ffffff;
-        font-size: 36px;
-        text-align: left;
-        margin-bottom: 80px;
+		font-size: 36px;
+		text-align: left;
+		margin-bottom: 80px;
 	}
 }
 
-.feed-form{
+.feed-form {
 	display: flex;
 	flex-direction: column;
 	width: 300px;
-	
-	input{
+
+	input {
 		height: 50px;
 		background-color: #ffffff;
 		border-radius: 5px;
 		border: none;
 		margin-bottom: 15px;
 		padding: 0 20px;
-		&:nth-child(3){
+		&:nth-child(3) {
 			margin-bottom: 20px;
 		}
 	}
