--- a/src/scss/blocks/_catalog.scss
+++ b/src/scss/blocks/_catalog.scss
@@ -1,162 +1,178 @@
 /* -------------- Catalog ------------*/
 
-.catalog{
-    .title{
-        margin-bottom: 68px;
-    }
-    padding-bottom: 100px;
+.catalog {
+	.title {
+		margin-bottom: 68px;
+	}
+	padding-bottom: 100px;
 
-    &__tabs{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        list-style-type: none;
-        margin-bottom: 59px;
-        
-    }
+	&__tabs {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		list-style-type: none;
+		margin-bottom: 59px;
+	}
 
-    &__tab{
-        width: 220px;
-        height: 50px;
-        line-height: 48px;
-        border: 2px solid #d0d0d0;
-        color: #6b6b6b;
-        font-size: 18px;
-        font-weight: 500;
-        text-transform: uppercase;
-        text-align: center;
-        margin: 0 5px;
-        transform: skewX(-25deg);
-        cursor: pointer;
-        transition: 0.5 all;
-        &:hover{
-            box-shadow: 3px 3px 20px $main-color;
-            border: none;
-        }
-        div{
-            transform: skewX(25deg);
-        }
-        &_active{
-            color: #fff;
-            background-color: $main-color;
-            border: none;
-        }
-    }
+	&__tab {
+		width: 220px;
+		height: 50px;
+		line-height: 48px;
+		border: 2px solid #d0d0d0;
+		color: #6b6b6b;
+		font-size: 18px;
+		font-weight: 500;
+		text-transform: uppercase;
+		text-align: center;
+		margin: 0 5px;
+		transform: skewX(-25deg);
+		cursor: pointer;
+		transition: 0.5 all;
+		&:hover {
+			box-shadow: 3px 3px 20px $main-color;
+			border: none;
+		}
+		div {
+			transform: skewX(25deg);
+		}
+		&_active {
+			color: #fff;
+			background-color: $main-color;
+			border: none;
+		}
+	}
 
-    &__content{
-        display: none;
-        justify-content: space-between;
-        margin-bottom: 20px;
+	&__content {
+		display: none;
+		justify-content: space-between;
+        flex-wrap: wrap;
+		margin-bottom: 20px;
 
-        &_active{
-            display: flex;
-        }
-    }
+		&_active {
+			display: flex;
+		}
+	}
 
-    &-item{
-        width: 300px;
-        min-height: 440px;
-        padding: 20px 20px 26px 20px;
-        border: 2px solid #e8e8e8;
+	&-item {
+		width: 300px;
+		min-height: 440px;
+		padding: 20px 20px 26px 20px;
+		border: 2px solid #e8e8e8;
+		margin-bottom: 20px;
 
-        &__img{
-            display: block;
-            margin: 0 auto;
-            margin-bottom: 20px;
-            max-width: 100%;
-            height: 200px;
-        }
+		&__content{
+			display: none;
 
-        &__subtitle{
-            color: #0d0d0d;
-            font-size: 16px;
-            font-weight: 700;
-            text-align: center;
-            margin-bottom: 16px;
-        }
+			&_active{
+				display: block;
+			}
 
-        &__desc{
-            color: #0d0d0d;
-            font-size: 14px;
-            font-weight: 400;
-            text-align: center;
-            margin-bottom: 17px;
-        }
+		}
 
-        &__more{
-            display: block;
-            color: $main-color;
-            font-size: 14px;
-            font-weight: 500;
-            text-decoration: underline;
-            text-align: center;
-            margin-bottom: 19px;
-            &:hover{
-                color: $main-color;
-            }
-        }
-        hr{
-            background-color: #e8e8e8;
-            margin-bottom: 21px;
-        }
+		&__img {
+			display: block;
+			margin: 0 auto;
+			margin-bottom: 20px;
+			max-width: 100%;
+			height: 200px;
+		}
 
-        &__footer{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+		&__subtitle {
+			color: #0d0d0d;
+			font-size: 16px;
+			font-weight: 700;
+			text-align: center;
+			margin-bottom: 16px;
+		}
 
-        &__old-price{
-            color: #555555;
-            font-size: 14px;
-            font-weight: 300;
-            text-decoration: line-through;
-        }
-        &__price{
-            color: #050505;
-            font-size: 20px;
-            font-weight: 700;
-        }
+		&__desc {
+			color: #0d0d0d;
+			font-size: 14px;
+			font-weight: 400;
+			text-align: center;
+			margin-bottom: 17px;
+		}
 
-        &__list{
-            margin-bottom: 84px;
-            padding-left: 19px;
-            transition: 0.5s all;
-            display: none;
+		&__more {
+			display: block;
+			color: $main-color;
+			font-size: 14px;
+			font-weight: 500;
+			text-decoration: underline;
+			text-align: center;
+			margin-bottom: 19px;
+			&:hover {
+				color: $main-color;
+			}
+		}
+		hr {
+			background-color: #e8e8e8;
+			margin-bottom: 21px;
+		}
 
-            li{
-                position: relative;
-                list-style-type: none;
-                margin-bottom: 20px;
-                color: #555555;
-                font-size: 14px;
-                font-weight: 300;
-                    
-                &:before{
-                    content: '';
-                    width: 5px;
-                    height: 5px;
-                    background-color: $main-color;
-                    position: absolute;
-                    top: 4px;
-                    left: -14px;
-                }
-                
-            }
-        }
-        &__back{
-            display: block;
-            color: $main-color;
-            font-size: 14px;
-            font-weight: 500;
-            text-decoration: underline;
-            text-align: center;
-            margin-bottom: 19px;
-            &:hover{
-                color: $main-color;
-            }
-        }
-        
+		&__footer {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+		}
 
-    }
+		&__old-price {
+			color: #555555;
+			font-size: 14px;
+			font-weight: 300;
+			text-decoration: line-through;
+		}
+		&__price {
+			color: #050505;
+			font-size: 20px;
+			font-weight: 700;
+		}
+
+		&__list {
+			position: relative;
+			margin-bottom: 124px;
+			padding-left: 19px;
+			transition: 0.5s all;
+			display: none;
+
+			&_active{
+				display: block;
+			}
+
+			li {
+				position: relative;
+				list-style-type: none;
+				margin-bottom: 20px;
+				color: #555555;
+				font-size: 14px;
+				font-weight: 300;
+
+				&:before {
+					content: "";
+					width: 5px;
+					height: 5px;
+					background-color: $main-color;
+					position: absolute;
+					top: 4px;
+					left: -14px;
+				}
+			}
+		}
+		&__back {
+			display: block;
+			color: $main-color;
+			font-size: 14px;
+			font-weight: 500;
+			text-decoration: underline;
+			text-align: center;
+			margin-bottom: 19px;
+			position: absolute;
+			bottom: -60%;
+			left: 50%;
+			transform: translateX(-50%);
+			&:hover {
+				color: $main-color;
+			}
+		}
+	}
 }
