--- a/src/scss/blocks/_consultation.scss
+++ b/src/scss/blocks/_consultation.scss
@@ -1,15 +1,15 @@
 /* -------------- Consultation ------------*/
-.consultation{
-    background: url('../img/consultation-bg.jpg') center center/cover no-repeat;
-    min-height: 680px;
-    padding: 100px 0 94px 0;
+.consultation {
+	background: url("../img/consultation-bg.jpg") center center/cover no-repeat;
+	min-height: 680px;
+	padding: 100px 0 94px 0;
 
-    &__desc{
-        color: #ffffff;
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 20px;
-        text-align: left;
-        margin-bottom: 36px;
-    }
+	&__desc {
+		color: #ffffff;
+		font-size: 20px;
+		font-weight: 500;
+		line-height: 20px;
+		text-align: left;
+		margin-bottom: 36px;
+	}
 }
