--- a/src/scss/blocks/_promo.scss
+++ b/src/scss/blocks/_promo.scss
@@ -1,108 +1,105 @@
 /* -------------- PROMO ------------*/
 
-.promo{
-    min-height: 651px;
-    padding: 21px 0 93px 0;
-    background: url('../img/promo-bg.jpg') center center/cover no-repeat;
+.promo {
+	min-height: 651px;
+	padding: 21px 0 93px 0;
+	background: url("../img/promo-bg.jpg") center center/cover no-repeat;
 
-    &__wrap{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        
-    }
+	&__wrap {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+	}
 
-    &__title {
-        color: #ffffff;
-        font-size: 42px;
-        font-weight: 700;
-        text-transform: uppercase;
-    }
+	&__title {
+		color: #ffffff;
+		font-size: 42px;
+		font-weight: 700;
+		text-transform: uppercase;
+	}
 
-    &__subtitle {
-        color: #ffffff;
-        font-size: 24px;
-        font-weight: 500;
-        text-transform: uppercase;
-        margin-bottom: 67px;
-    }
-    &__icons {
-        display: flex;
-        justify-content: space-between;
-        width: 446px;
-    }
-    &__icon {
-        width: 106px;
-        text-align: center;
-        color: #ffffff;
-        font-size: 14px;
-        font-weight: 500;
-        margin-bottom: 67px;
-        img{
-            display: block;
-            margin: 0 auto;
-            margin-bottom: 20px;
-        }
-    }
-    .btn.btn_main {
-        width: 300px;
-        height: 50px;
-        font-size: 16px;
-        font-weight: 500;
-        text-transform: uppercase;
-        margin-bottom: 18px;
-    }
-    &__link {
-        color: #ffffff;
-        font-size: 16px;
-        font-weight: 500;
-        a {
-            color: #ffffff;
-            text-transform: uppercase;
-            text-decoration: underline;
-        }
-    }
-
-
+	&__subtitle {
+		color: #ffffff;
+		font-size: 24px;
+		font-weight: 500;
+		text-transform: uppercase;
+		margin-bottom: 67px;
+	}
+	&__icons {
+		display: flex;
+		justify-content: space-between;
+		width: 446px;
+	}
+	&__icon {
+		width: 106px;
+		text-align: center;
+		color: #ffffff;
+		font-size: 14px;
+		font-weight: 500;
+		margin-bottom: 67px;
+		img {
+			display: block;
+			margin: 0 auto;
+			margin-bottom: 20px;
+		}
+	}
+	.btn.btn_main {
+		width: 300px;
+		height: 50px;
+		font-size: 16px;
+		font-weight: 500;
+		text-transform: uppercase;
+		margin-bottom: 18px;
+	}
+	&__link {
+		color: #ffffff;
+		font-size: 16px;
+		font-weight: 500;
+		a {
+			color: #ffffff;
+			text-transform: uppercase;
+			text-decoration: underline;
+		}
+	}
 }
 
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 91px;
+.header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 91px;
 
-    &__logo {
-        width: 250px;
-        img{
-            width: 100%;
-        }
-    }
+	&__logo {
+		width: 250px;
+		img {
+			width: 100%;
+		}
+	}
 
-    &__official {
-        color: #ffffff;
-        font-size: 12px;
-        font-weight: 500;
+	&__official {
+		color: #ffffff;
+		font-size: 12px;
+		font-weight: 500;
 
-        text-align: center;
-        span{
-            display: block;
-            font-size: 18px;
-            font-weight: 700;
-        }
-    }
+		text-align: center;
+		span {
+			display: block;
+			font-size: 18px;
+			font-weight: 700;
+		}
+	}
 
-    &__contacts {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-    }
-    
-    &__phone {
-        display: block;
-        color: #ffffff;
-        font-size: 18px;
-        font-weight: 700;
-        margin-bottom: 8px;
-    }
+	&__contacts {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+	}
+
+	&__phone {
+		display: block;
+		color: #ffffff;
+		font-size: 18px;
+		font-weight: 700;
+		margin-bottom: 8px;
+	}
 }
