--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,22 +1,16 @@
-@import 'base/normalize';
-@import 'base/variables';
-@import 'base/fonts';
-@import 'base/mixins';
+@import "base/normalize";
+@import "base/variables";
+@import "base/fonts";
+@import "base/mixins";
 
-@import 'base/setting';
+@import "base/setting";
 
-@import 'blocks/promo';
-@import 'blocks/advantages';
-@import 'blocks/consultation';
-@import 'base/slick';
-@import 'blocks/carousel';
-@import 'blocks/catalog';
-
-
-
-
+@import "blocks/promo";
+@import "blocks/advantages";
+@import "blocks/consultation";
+@import "base/slick";
+@import "blocks/carousel";
+@import "blocks/catalog";
 
 /* always end */
-@import 'media';
-
-
+@import "media";
