--- a/src/scss/blocks/_catalog.scss
+++ b/src/scss/blocks/_catalog.scss
@@ -130,7 +130,7 @@
 
 		&__list {
 			position: relative;
-			margin-bottom: 124px;
+			margin-bottom: calc(100% - 138px);
 			padding-left: 19px;
 			transition: 0.5s all;
 			display: none;
@@ -167,7 +167,7 @@
 			text-align: center;
 			margin-bottom: 19px;
 			position: absolute;
-			bottom: -60%;
+			bottom: -50%;
 			left: 50%;
 			transform: translateX(-50%);
 			&:hover {
