--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -96,4 +96,19 @@
 			font-size: 9px;
 		}
 	}
+
+	.feedback{
+		&__img{
+			margin-bottom: 20px;
+		}
+		&__item{
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+			margin-bottom: 100px;
+		}
+		&__desc{
+			text-align: left;
+		}
+	}
 }
