--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import "base/slick";
 @import "blocks/carousel";
 @import "blocks/catalog";
+@import "blocks/feedback";
 
 /* always end */
 @import "media";
