--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import "blocks/carousel";
 @import "blocks/catalog";
 @import "blocks/feedback";
+@import "blocks/footer";
 
 /* always end */
 @import "media";
