modal window dona

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,9 @@
 @import "blocks/catalog";
 @import "blocks/feedback";
 @import "blocks/footer";
+@import "blocks/footer";
+@import "blocks/modal";
+
 
 /* always end */
 @import "media";
