--- a/src/scss/base/_setting.scss
+++ b/src/scss/base/_setting.scss
@@ -60,6 +60,11 @@ a:hover {
 		font-size: 14px;
 		font-weight: 500;
 	}
+	&_submit{
+		width: 300px;
+		height: 55px;
+		font-size: 16px;
+	}
 }
 
 .title {
